--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "tsc-watch --onSuccess \"node ./dist/server.js\"",
     "startpm2": "npx pm2 start pm2.yaml",
     "test": "jest",
-    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+    "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix --ignore-pattern '/dist/**'"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,10 @@
     "transform": {
       "^.+\\.tsx?$": "ts-jest"
     },
+    "testPathIgnorePatterns": [
+      "/dist/",
+      "/node_modules/"
+    ],
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "moduleFileExtensions": [
       "ts",
@@ -55,6 +59,7 @@
     "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^23.6.0",
     "prettier": "^1.19.1",
